# MedicalAssistantRaG

./: .gitignore  Jenkinsfile  JenkinsfileReact  docker-compose.yaml
Backend/: .dockerignore  .gitignore  pyproject.toml  requirements.txt
Backend/app/: server.py
Backend/app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
Backend/app/config/: config.py
Frontend/Medical-Chat/: .eslintrc.json  index.html  package-lock.json  package.json
Frontend/Medical-Chat/src/: App.jsx  index.css
Frontend/Medical-Chat/src/components/: ChatInput.jsx  MessageBubble.jsx  Navbar.jsx  PopupDiv.jsx  StyledButton.jsx  TypeWriter.jsx
Frontend/Medical-Chat/src/hooks/: useChat.js  useStartChat.js
Frontend/Medical-Chat/src/pages/: ChatPage.jsx  landing_page.jsx
Frontend/Medical-Chat/src/services/: chatApi.js
Frontend/Medical-Chat/src/utils/: constants.js
docker-volumes/cache/: dump.rdb
dockerfiles/: Client.Dockerfile  Server.Dockerfile
